openapi.ymlのレスポンス型の命名規則をキャメルケースに統一、nullable追加
